Verse max width increased to prevent line wrapping

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   --h2-font-size: 32px;
   --h2-font-weight: var(var(--h1-font-weight));
 
-  --verse-max-width: 362px;
+  --verse-max-width: 392px;
 }
 
 /* For mobile phones */
